--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <title>CTE Dashboard</title>
+		<title>CTE Dashboard</title>
+		<script src="/javascripts/nav.js"></script>
   </head>
   <body>
     <noscript>
