--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/stylesheets/main.css">
 		<title>CTE Dashboard</title>
 		<script src="/javascripts/nav.js"></script>
+		<!-- fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600|Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>
