--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -10,6 +10,7 @@
 		<script src="/javascripts/nav.js"></script>
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600|Open+Sans&display=swap" rel="stylesheet">
+		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
