Fix some lint errors

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <title>CTE Dashboard</title>
+    <title>Dashboard</title>
     <script src="/javascripts/nav.js"></script>
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Open+Sans&display=swap" rel="stylesheet">
