Introduced theme & remove server rendered views

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="/stylesheets/main.css">
-    <title>Dashboard</title>
-    <script src="/javascripts/nav.js"></script>
+    <title>Noodle</title>
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Open+Sans&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
